--- a/klipperscreen.sample.conf
+++ b/klipperscreen.sample.conf
@@ -52,3 +52,6 @@ moonraker_api_key: False
 # Can be 'full' indicating that the full name is shown, 'short' for the first letter, or None (default) for no name
 # titlebar_name_type: None
 titlebar_name_type: full
+
+# Set the webcam URL to use for the webcam panel
+camera_url: http://192.168.0.69/webcam/?action=stream
